trabajamos con rama bogota

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <ul class="navbar-nav mx-auto">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="//.index.html">Home</a>
           </li>
@@ -72,7 +72,7 @@
             placeholder="Search"
             aria-label="Search"
           />
-          <button class="btn btn-outline-success" type="submit">Buscador</button>
+          <button class="btn btn-primary" type="submit">Buscador</button>
         </form>
       </div>
     </div>
@@ -114,7 +114,7 @@
         <div class="carousel-item active">
           <img
             src="img/professional-car-wash-spraying-water-from-high-pressure-washer-rinse-off-suds_95891-6055.webp"
-            class="d-block w-100"
+            class="d-block w-100 imgcarusel"
             alt="lavadode espuma "
             class="img-fluid"
           />
@@ -139,7 +139,7 @@
         <div class="carousel-item 2">
           <img
             src="img/llantas.jpg"
-            class="d-block w-100"
+            class="d-block w-100 imgcarusel"
             alt="limpieza de llantas y rines"
           />
           <div class="carousel-caption d-none d-md-block">
@@ -163,7 +163,7 @@
         <div class="carousel-item 3">
           <img
             src="img/what-is-auto-detailing.jpeg"
-            class="d-block w-100"
+            class="d-block w-100 imgcarusel"
             alt="polichado"
           />
           <div class="carousel-caption d-none d-md-block">
@@ -250,9 +250,9 @@
       <div class="card" style="width: 18rem;">
         <img src="img/product3.png" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Prodct 1</h5>
+          <h5 class="card-title text-center">Driping wet finish </h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <a href="#" class="btn btn-primary">Buy me</a>
         </div>
       </div>
        </div>
@@ -260,9 +260,9 @@
         <div class="card" style="width: 18rem;">
           <img src="img/Product1.png" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Product 2</h5>
+            <h5 class="card-title text-center">Insta wash</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="#" class="btn btn-primary">Buy me</a>
           </div>
         </div>
          </div>
@@ -270,9 +270,9 @@
           <div class="card" style="width: 18rem;">
             <img src="img/producto2.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Product 3</h5>
+              <h5 class="card-title text-center">Speed Wipe</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="#" class="btn btn-primary">Buy me</a>
             </div>
           </div>
            </div>
@@ -280,9 +280,9 @@
             <div class="card" style="width: 18rem;">
               <img src="img/product2.png" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Prdoduct 4</h5>
+                <h5 class="card-title text-center">Slick finish</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="#" class="btn btn-primary">Buy me</a>
               </div>
             </div>
              </div>
