--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 
   <!--APLICAMOS NAV BAR -->
 
-  <nav class="navbar navbar-expand-lg"style="background-color: #736FD1;" >
+  <nav class="navbar navbar-expand-lg" style="background-color: #736fd1">
     <div class="container-fluid">
       <a class="navbar-brand" href="#"
-        ><img src="../nuevo/img/logo123.png" alt="logo"></a
-      >
+        ><img src="../nuevo/img/logo123.png" alt="logo"
+      /></a>
       <button
         class="navbar-toggler"
         type="button"
@@ -37,9 +37,11 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mx-auto">
+        <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="//.index.html">Home</a>
+            <a class="nav-link active" aria-current="page" href="//.index.html"
+              >Home</a
+            >
           </li>
           <li class="nav-item">
             <a class="nav-link" href="multimedia.html">Multimedia</a>
@@ -79,8 +81,6 @@
   </nav>
 
   <body class="container-fluid">
-  
-
     <!--APLICAMOS CARUSSEL CON IMAGENES-->
 
     <div
@@ -239,57 +239,122 @@
 -->
     <!--NAVBAR-->
 
+    <!--cards-->
 
-<!--cards-->
+    <hr />
+    <hr />
 
-<hr><hr>
-
-<div class="container">
-  <div class="row">
-    <div class="col-md-3">
-      <div class="card" style="width: 18rem;">
-        <img src="img/product3.png" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title text-center">Driping wet finish </h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Buy me</a>
-        </div>
-      </div>
-       </div>
-       <div class="col-md-3">
-        <div class="card" style="width: 18rem;">
-          <img src="img/Product1.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title text-center">Insta wash</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Buy me</a>
-          </div>
-        </div>
-         </div>
-         <div class="col-md-3">
-          <div class="card" style="width: 18rem;">
-            <img src="img/producto2.png" class="card-img-top" alt="...">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3">
+          <div class="card" style="width: 18rem">
+            <img src="img/product3.png" class="card-img-top" alt="..." />
             <div class="card-body">
-              <h5 class="card-title text-center">Speed Wipe</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h5 class="card-title text-center">Driping wet finish</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
               <a href="#" class="btn btn-primary">Buy me</a>
             </div>
           </div>
-           </div>
-           <div class="col-md-3">
-            <div class="card" style="width: 18rem;">
-              <img src="img/product2.png" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title text-center">Slick finish</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Buy me</a>
-              </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card" style="width: 18rem">
+            <img src="img/Product1.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title text-center">Insta wash</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="btn btn-primary">Buy me</a>
             </div>
-             </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card" style="width: 18rem">
+            <img src="img/producto2.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title text-center">Speed Wipe</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="btn btn-primary">Buy me</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card" style="width: 18rem">
+            <img src="img/product2.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title text-center">Slick finish</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="btn btn-primary">Buy me</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-  </div>
-  
+    <hr><hr>
 
+    <div id="local">
+      <div class="mapa"></div>
+      <div>
+        <div class="wrapper">
+          <h2>Ubicasdo en West Palm Beach , Florida</h2>
+          <h2 class="text-primary mb-4"></h2>
+          <p class="fs-5 text-body">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Et odio
+            inventore amet ea ducimus quas ut provident nam cumque tenetur
+            dolore ullam harum animi fugit, nulla fugiat. Animi perspiciatis
+            dolorem architecto alias, ullam qui quasi accusantium vel maiores
+            cumque quidem numquam id! Earum amet enim nobis itaque est commodi
+            tempore beatae quae adipisci! Earum, doloremque? Facere laborum hic,
+            veritatis error numquam officiis dolorem. Harum voluptas, cum ullam
+            architecto sunt aliquid maxime aperiam quis dolorem odio adipisci ad
+            doloribus, magni fugit alias sint rerum neque tenetur accusantium
+            repellendus quasi suscipit mollitia. Magnam veritatis perferendis ad
+            nisi, quisquam porro officiis expedita dolorem!
+          </p>
+        </div>
+      </div>
+    </div>
+
+
+<!--========================================================== -->
+                        <!--Formulario-->
+<!--========================================================== -->
+<br><br>
+<section class="form-register">
+  <h4>Formulario Registro</h4>
+  <input class="controls" type="text"name="nombres"id="nombres" placeholder="ingrese su nombre">
+  <input class="controls" type="text"name="apellidos"id="apellidos" placeholder="ingrese su apellido">
+  <input class="controls" type="email"name="correo electronico"id="correo electronico" placeholder="ingrese su correo electronico">
+  <input class="controls" type="password"name="password"id="password" placeholder="password">
+  <p>Estoy de acuerdo con <a href="">terminos y condiciones</a></p>
+  <input class="botons" type="submit" value="registrar">
+  <p><a href="">?ya tengo cuenta?</a></p>
+</section>
+  <br><br>
+
+    
+<!--========================================================== -->
+                        <!--FOOTER-->
+<!--========================================================== -->
+<footer class="w-100  d-flex  align-items-center justify-content-center flex-wrap">
+  <p class="fs-5 px-3  pt-3">ID Car wash. &copy; Todos Los Derechos Reservados 2021</p>
+  <div id="iconos" >
+      <a href="#"><i class="bi bi-facebook"></i></a>
+      <a href="#"><i class="bi bi-twitter"></i></a>
+      <a href="#"><i class="bi bi-instagram"></i></a>  
+  </div>
+</footer>
+  
     <!-- JavaScript Bundle with Popper -->
 
     <script
